seaqt/QtCore/gen_qcborvalue.h

class QCborArray;
class QCborError;
class QCborMap;
class QCborParserError;
class QCborStreamReader;
class QCborValue;
class QCborValueRef;
class QDateTime;
class QJsonValue;
class QRegularExpression;
class QUrl;
class QUuid;
class QVariant;
typedef struct QCborArray QCborArray;
typedef struct QCborError QCborError;
typedef struct QCborMap QCborMap;
typedef struct QCborParserError QCborParserError;
typedef struct QCborStreamReader QCborStreamReader;
typedef struct QCborStreamWriter QCborStreamWriter;
typedef struct QCborValue QCborValue;
typedef struct QCborValueRef QCborValueRef;
typedef struct QDateTime QDateTime;
typedef struct QJsonValue QJsonValue;
typedef struct QRegularExpression QRegularExpression;
typedef struct QUrl QUrl;
typedef struct QUuid QUuid;
typedef struct QVariant QVariant;
QCborValueRef* QCborValueRef_new(QCborValueRef* from);
void QCborValueRef_toCbor_writer(QCborValueRef* self, QCborStreamWriter* writer);
struct seaqt_string QCborValueRef_toDiagnosticNotation(QCborValueRef* self);
uint8_t QCborValueRef_toSimpleType_defaultValue(const QCborValueRef* self, uint8_t defaultValue);
uint64_t QCborValueRef_tag_defaultValue(const QCborValueRef* self, uint64_t defaultValue);
QCborValue* QCborValueRef_taggedValue_defaultValue(const QCborValueRef* self, QCborValue* defaultValue);
long long QCborValueRef_toInteger_defaultValue(const QCborValueRef* self, long long defaultValue);
bool QCborValueRef_toBool_defaultValue(const QCborValueRef* self, bool defaultValue);
double QCborValueRef_toDouble_defaultValue(const QCborValueRef* self, double defaultValue);
struct seaqt_string QCborValueRef_toByteArray_defaultValue(const QCborValueRef* self, struct seaqt_string defaultValue);
struct seaqt_string QCborValueRef_toString_defaultValue(const QCborValueRef* self, struct seaqt_string defaultValue);
QDateTime* QCborValueRef_toDateTime_defaultValue(const QCborValueRef* self, QDateTime* defaultValue);
QUrl* QCborValueRef_toUrl_defaultValue(const QCborValueRef* self, QUrl* defaultValue);
QRegularExpression* QCborValueRef_toRegularExpression_defaultValue(const QCborValueRef* self, QRegularExpression* defaultValue);
QUuid* QCborValueRef_toUuid_defaultValue(const QCborValueRef* self, QUuid* defaultValue);
struct seaqt_string QCborValueRef_toCbor_opt(QCborValueRef* self, int opt);
void QCborValueRef_toCbor_writer_opt(QCborValueRef* self, QCborStreamWriter* writer, int opt);
struct seaqt_string QCborValueRef_toDiagnosticNotation_opt(QCborValueRef* self, int opt);