seaqt/QtCore/gen_qcborvalue.nim

proc fcQCborValueRef_toCborWriter(self: pointer, writer: pointer): void {.importc: "QCborValueRef_toCbor_writer".}
proc fcQCborValueRef_toDiagnosticNotation(self: pointer): struct_seaqt_string {.importc: "QCborValueRef_toDiagnosticNotation".}
proc fcQCborValueRef_toSimpleTypeDefaultValue(self: pointer, defaultValue: cint): cint {.importc: "QCborValueRef_toSimpleType_defaultValue".}
proc fcQCborValueRef_tagDefaultValue(self: pointer, defaultValue: cint): cint {.importc: "QCborValueRef_tag_defaultValue".}
proc fcQCborValueRef_taggedValueDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueRef_taggedValue_defaultValue".}
proc fcQCborValueRef_toIntegerDefaultValue(self: pointer, defaultValue: clonglong): clonglong {.importc: "QCborValueRef_toInteger_defaultValue".}
proc fcQCborValueRef_toBoolDefaultValue(self: pointer, defaultValue: bool): bool {.importc: "QCborValueRef_toBool_defaultValue".}
proc fcQCborValueRef_toDoubleDefaultValue(self: pointer, defaultValue: float64): float64 {.importc: "QCborValueRef_toDouble_defaultValue".}
proc fcQCborValueRef_toByteArrayDefaultValue(self: pointer, defaultValue: struct_seaqt_string): struct_seaqt_string {.importc: "QCborValueRef_toByteArray_defaultValue".}
proc fcQCborValueRef_toStringDefaultValue(self: pointer, defaultValue: struct_seaqt_string): struct_seaqt_string {.importc: "QCborValueRef_toString_defaultValue".}
proc fcQCborValueRef_toDateTimeDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueRef_toDateTime_defaultValue".}
proc fcQCborValueRef_toUrlDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueRef_toUrl_defaultValue".}
proc fcQCborValueRef_toRegularExpressionDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueRef_toRegularExpression_defaultValue".}
proc fcQCborValueRef_toUuidDefaultValue(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueRef_toUuid_defaultValue".}
proc fcQCborValueRef_toCborOpt(self: pointer, opt: cint): struct_seaqt_string {.importc: "QCborValueRef_toCbor_opt".}
proc fcQCborValueRef_toCborWriterOpt(self: pointer, writer: pointer, opt: cint): void {.importc: "QCborValueRef_toCbor_writer_opt".}
proc fcQCborValueRef_toDiagnosticNotationOpt(self: pointer, opt: cint): struct_seaqt_string {.importc: "QCborValueRef_toDiagnosticNotation_opt".}
proc fcQCborValueRef_new(fromVal: pointer): ptr cQCborValueRef {.importc: "QCborValueRef_new".}

proc offset*(self: gen_qcborvalue_types.QCborParserError): clonglong =
  fcQCborParserError_offset(self.h)

proc setOffset*(self: gen_qcborvalue_types.QCborParserError, offset: clonglong): void =
  fcQCborParserError_setOffset(self.h, offset)

proc error*(self: gen_qcborvalue_types.QCborParserError): gen_qcborcommon_types.QCborError =
  gen_qcborcommon_types.QCborError(h: fcQCborParserError_error(self.h), owned: true)

proc setError*(self: gen_qcborvalue_types.QCborParserError, error: gen_qcborcommon_types.QCborError): void =
  fcQCborParserError_setError(self.h, error.h)

proc errorString*(self: gen_qcborvalue_types.QCborParserError): string =
  let v_ms = fcQCborParserError_errorString(self.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc operatorAssign*(self: gen_qcborvalue_types.QCborValue, fromVal: gen_qcborvalue_types.QCborValue): void =
  fcQCborValue_operatorAssign(self.h, fromVal.h)

proc swap*(self: gen_qcborvalue_types.QCborValue, other: gen_qcborvalue_types.QCborValue): void =
  fcQCborValue_swap(self.h, other.h)

proc typeX*(self: gen_qcborvalue_types.QCborValue): cint =
  cint(fcQCborValue_typeX(self.h))

proc isInteger*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isInteger(self.h)

proc isByteArray*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isByteArray(self.h)

proc isString*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isString(self.h)

proc isArray*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isArray(self.h)

proc isMap*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isMap(self.h)

proc isTag*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isTag(self.h)

proc isFalse*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isFalse(self.h)

proc isTrue*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isTrue(self.h)

proc isBool*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isBool(self.h)

proc isNull*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isNull(self.h)

proc isUndefined*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isUndefined(self.h)

proc isDouble*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isDouble(self.h)

proc isDateTime*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isDateTime(self.h)

proc isUrl*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isUrl(self.h)

proc isRegularExpression*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isRegularExpression(self.h)

proc isUuid*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isUuid(self.h)

proc isInvalid*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isInvalid(self.h)

proc isContainer*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isContainer(self.h)

proc isSimpleType*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_isSimpleType(self.h)

proc isSimpleType*(self: gen_qcborvalue_types.QCborValue, st: cint): bool =
  fcQCborValue_isSimpleTypeSt(self.h, cint(st))

proc toSimpleType*(self: gen_qcborvalue_types.QCborValue): cint =
  cint(fcQCborValue_toSimpleType(self.h))

proc toInteger*(self: gen_qcborvalue_types.QCborValue): clonglong =
  fcQCborValue_toInteger(self.h)

proc toBool*(self: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_toBool(self.h)

proc toDouble*(self: gen_qcborvalue_types.QCborValue): float64 =
  fcQCborValue_toDouble(self.h)

proc tag*(self: gen_qcborvalue_types.QCborValue): cint =
  cint(fcQCborValue_tag(self.h))

proc taggedValue*(self: gen_qcborvalue_types.QCborValue): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborValue_taggedValue(self.h), owned: true)

proc toByteArray*(self: gen_qcborvalue_types.QCborValue): seq[byte] =
  var v_bytearray = fcQCborValue_toByteArray(self.h)
  var vx_ret = @(toOpenArray(cast[ptr UncheckedArray[byte]](v_bytearray.data), 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc toString*(self: gen_qcborvalue_types.QCborValue): string =
  let v_ms = fcQCborValue_toString(self.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc toDateTime*(self: gen_qcborvalue_types.QCborValue): gen_qdatetime_types.QDateTime =
  gen_qdatetime_types.QDateTime(h: fcQCborValue_toDateTime(self.h), owned: true)

proc toUrl*(self: gen_qcborvalue_types.QCborValue): gen_qurl_types.QUrl =
  gen_qurl_types.QUrl(h: fcQCborValue_toUrl(self.h), owned: true)

proc toRegularExpression*(self: gen_qcborvalue_types.QCborValue): gen_qregularexpression_types.QRegularExpression =
  gen_qregularexpression_types.QRegularExpression(h: fcQCborValue_toRegularExpression(self.h), owned: true)

proc toUuid*(self: gen_qcborvalue_types.QCborValue): gen_quuid_types.QUuid =
  gen_quuid_types.QUuid(h: fcQCborValue_toUuid(self.h), owned: true)

proc toArray*(self: gen_qcborvalue_types.QCborValue): gen_qcborarray_types.QCborArray =
  gen_qcborarray_types.QCborArray(h: fcQCborValue_toArray(self.h), owned: true)

proc toArray*(self: gen_qcborvalue_types.QCborValue, defaultValue: gen_qcborarray_types.QCborArray): gen_qcborarray_types.QCborArray =
  gen_qcborarray_types.QCborArray(h: fcQCborValue_toArrayDefaultValue(self.h, defaultValue.h), owned: true)

proc toMap*(self: gen_qcborvalue_types.QCborValue): gen_qcbormap_types.QCborMap =
  gen_qcbormap_types.QCborMap(h: fcQCborValue_toMap(self.h), owned: true)

proc toMap*(self: gen_qcborvalue_types.QCborValue, defaultValue: gen_qcbormap_types.QCborMap): gen_qcbormap_types.QCborMap =
  gen_qcbormap_types.QCborMap(h: fcQCborValue_toMapDefaultValue(self.h, defaultValue.h), owned: true)

proc operatorSubscript*(self: gen_qcborvalue_types.QCborValue, key: openArray[char]): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborValue_operatorSubscriptConstCQString(self.h, struct_seaqt_string(data: if len(key) > 0: addr key[0] else: nil, len: csize_t(len(key)))), owned: true)

proc operatorSubscript*(self: gen_qcborvalue_types.QCborValue, key: clonglong): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborValue_operatorSubscriptConstQint64(self.h, key), owned: true)

proc operatorSubscript2*(self: gen_qcborvalue_types.QCborValue, key: clonglong): gen_qcborvalue_types.QCborValueRef =
  gen_qcborvalue_types.QCborValueRef(h: fcQCborValue_operatorSubscriptQint64(self.h, key), owned: true)

proc operatorSubscript2*(self: gen_qcborvalue_types.QCborValue, key: openArray[char]): gen_qcborvalue_types.QCborValueRef =
  gen_qcborvalue_types.QCborValueRef(h: fcQCborValue_operatorSubscriptCQString(self.h, struct_seaqt_string(data: if len(key) > 0: addr key[0] else: nil, len: csize_t(len(key)))), owned: true)

proc compare*(self: gen_qcborvalue_types.QCborValue, other: gen_qcborvalue_types.QCborValue): cint =
  fcQCborValue_compare(self.h, other.h)

proc operatorEqual*(self: gen_qcborvalue_types.QCborValue, other: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: gen_qcborvalue_types.QCborValue, other: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_operatorNotEqual(self.h, other.h)

proc operatorLesser*(self: gen_qcborvalue_types.QCborValue, other: gen_qcborvalue_types.QCborValue): bool =
  fcQCborValue_operatorLesser(self.h, other.h)

proc fromVariant*(_: type gen_qcborvalue_types.QCborValue, variant: gen_qvariant_types.QVariant): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborValue_fromVariant(variant.h), owned: true)

proc toVariant*(self: gen_qcborvalue_types.QCborValue): gen_qvariant_types.QVariant =
  gen_qvariant_types.QVariant(h: fcQCborValue_toVariant(self.h), owned: true)

proc fromJsonValue*(_: type gen_qcborvalue_types.QCborValue, v: gen_qjsonvalue_types.QJsonValue): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborValue_fromJsonValue(v.h), owned: true)

proc toJsonValue*(self: gen_qcborvalue_types.QCborValue): gen_qjsonvalue_types.QJsonValue =
  gen_qjsonvalue_types.QJsonValue(h: fcQCborValue_toJsonValue(self.h), owned: true)

proc fromCbor*(_: type gen_qcborvalue_types.QCborValue, reader: gen_qcborstreamreader_types.QCborStreamReader): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborValue_fromCbor_QCborStreamReader(reader.h), owned: true)

proc fromCbor*(_: type gen_qcborvalue_types.QCborValue, ba: openArray[byte]): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborValue_fromCbor_QByteArray(struct_seaqt_string(data: if len(ba) > 0: addr ba[0] else: nil, len: csize_t(len(ba)))), owned: true)

proc fromCbor*(_: type gen_qcborvalue_types.QCborValue, data: cstring, len: int64): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborValue_fromCborCharQsizetype(data, len), owned: true)

proc fromCbor*(_: type gen_qcborvalue_types.QCborValue, data: ptr uint8, len: int64): gen_qcborvalue_types.QCborValue =
  gen_qcborvalue_types.QCborValue(h: fcQCborValue_fromCborQuint8Qsizetype(data, len), owned: true)

proc toCbor*(self: gen_qcborvalue_types.QCborValue): seq[byte] =
  var v_bytearray = fcQCborValue_toCbor(self.h)
  var vx_ret = @(toOpenArray(cast[ptr UncheckedArray[byte]](v_bytearray.data), 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret
